--- a/docs/JS/verkefni 4/main.css
+++ b/docs/JS/verkefni 4/main.css
@@ -1,3 +1,4 @@
+
 html {
     box-sizing: border-box;
     background: #4f43fa;
@@ -107,4 +108,119 @@ span.population {
     border-radius: 5px;
     font-size: 19px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+}
+
+@media(max-width: 854px){
+ 
+    html {
+        box-sizing: border-box;
+        background: #4f43fa;
+        font-family: 'helvetica neue';
+        font-size: 20px;
+        font-weight: 200;
+    }
+
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+
+    .columeMaster{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        position: relative;
+        left: -1em;
+        top: 44px;
+    }
+
+    .moveTimePosition{
+        position: relative;
+        bottom: 120px;
+        left: 44px;
+    }
+
+    .wordMaster{
+        position: relative;
+        left: 1em;
+        bottom: -2px;
+        margin: 3px;
+    }
+
+    .divMaster {
+        margin-top: 1em;
+        display: flex;
+        width: 98%;
+    }
+
+    .smallMaster{
+        position: relative;
+        bottom: 41px;
+        left: 40px;
+    }
+
+    input {
+        width: 13%;
+        padding: 20px;
+    }
+
+    .search-form {
+        max-width: 72em;
+        margin: 50px auto;
+    }
+
+    input.search {
+        margin-bottom: 69px;
+        text-align: center;
+        outline: 0;
+        border: 10px solid #F7F7F7;
+        width: 120%;
+        left: -10%;
+        position: relative;
+        top: 10px;
+        z-index: 2;
+        border-radius: 5px;
+        font-size: 30px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+    }
+
+    .suggestions {
+        margin: 0;
+        padding: 0;
+        position: relative;
+        display: grid;
+        grid-template-columns: 1fr;
+        /*perspective: 20px;*/
+    }
+
+    .suggestions li {
+        background: white;
+        list-style: none;
+        border-bottom: 1px solid #D8D8D8;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+        margin: 5px;
+        padding: 23px;
+        transition: background 0.2s;
+        display: flex;
+        justify-content: space-between;
+        text-transform: capitalize;
+    }
+
+    span.population {
+        font-size: 15px;
+    }
+
+    .hl {
+        background: #ffc600;
+    }
+
+    .end{
+        margin: 6%;
+        text-align: center;
+        outline: 0;
+        border: 10px solid rgb(231, 231, 231);
+        background-color: #F7F7F7;
+        width: 35%;
+        border-radius: 5px;
+        font-size: 19px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+    }
 }
