--- a/docs/JS/verkefni 4/main.css
+++ b/docs/JS/verkefni 4/main.css
@@ -3,7 +3,7 @@ html {
     box-sizing: border-box;
     background: #4f43fa;
     font-family: 'helvetica neue';
-    font-size: 20px;
+    font-size: 12px;
     font-weight: 200;
 }
 
@@ -68,13 +68,18 @@ input.search {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
 }
 
+.suggestionss {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
 .suggestions {
     margin: 0;
     padding: 0;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /*perspective: 20px;*/
 }
 
 .suggestions li {
@@ -84,11 +89,44 @@ input.search {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
     margin: 5px;
     padding: 23px;
-    transition: background 0.2s;
+    transition:
+            font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+            flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+            background 0.2s;
     display: flex;
     justify-content: space-between;
     text-transform: capitalize;
 }
+
+.suggestions > * {
+    margin: 0;
+    width: 100%;
+    transition: transform 0.5s;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.suggestions > *:first-child { transform: translateY(-100%); }
+.suggestions.open-active > *:first-child { transform: translateY(0); }
+.suggestions > *:last-child { transform: translateY(100%); }
+.suggestions.open-active > *:last-child { transform: translateY(0); }
+
+.suggestions p:nth-child(1) {
+    font-size: 1em;
+}
+.suggestions.open {
+    flex: 5;
+    font-size: 31px;
+}
+
+@media only screen and (max-width: 600px) {
+    .suggestions p {
+        font-size: 1em;
+    }
+}
+
 
 span.population {
     font-size: 15px;
@@ -108,6 +146,8 @@ span.population {
     border-radius: 5px;
     font-size: 19px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+    position: relative;
+    top: 45px;
 }
 
 @media(max-width: 854px){
@@ -182,13 +222,18 @@ span.population {
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
     }
 
+    .suggestionss {
+        margin: 0;
+        padding: 0;
+        display: flex;
+    }
+
     .suggestions {
         margin: 0;
         padding: 0;
         position: relative;
         display: grid;
         grid-template-columns: 1fr;
-        /*perspective: 20px;*/
     }
 
     .suggestions li {
@@ -202,7 +247,10 @@ span.population {
         display: flex;
         justify-content: space-between;
         text-transform: capitalize;
+        position: relative;
+        top: 62px;
     }
+    
 
     span.population {
         font-size: 15px;
@@ -218,9 +266,11 @@ span.population {
         outline: 0;
         border: 10px solid rgb(231, 231, 231);
         background-color: #F7F7F7;
-        width: 35%;
+        width: 97%;
         border-radius: 5px;
         font-size: 19px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
+        position: relative;
+        top: 143px;
     }
 }
