--- a/docs/JS/verkefni 4/main.css
+++ b/docs/JS/verkefni 4/main.css
@@ -68,11 +68,6 @@ input.search {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
 }
 
-.suggestionss {
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
 
 .suggestions {
     margin: 0;
@@ -89,44 +84,11 @@ input.search {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
     margin: 5px;
     padding: 23px;
-    transition:
-            font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-            flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-            background 0.2s;
+    transition: background 0.2s;
     display: flex;
     justify-content: space-between;
     text-transform: capitalize;
 }
-
-.suggestions > * {
-    margin: 0;
-    width: 100%;
-    transition: transform 0.5s;
-    flex: 1 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.suggestions > *:first-child { transform: translateY(-100%); }
-.suggestions.open-active > *:first-child { transform: translateY(0); }
-.suggestions > *:last-child { transform: translateY(100%); }
-.suggestions.open-active > *:last-child { transform: translateY(0); }
-
-.suggestions p:nth-child(1) {
-    font-size: 1em;
-}
-.suggestions.open {
-    flex: 5;
-    font-size: 31px;
-}
-
-@media only screen and (max-width: 600px) {
-    .suggestions p {
-        font-size: 1em;
-    }
-}
-
 
 span.population {
     font-size: 15px;
